--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +13,10 @@
   "dependencies": {
     "express": "^4.17.1",
     "moment": "^2.24.0"
+  },
+  "devDependencies": {
+    "supertest": "^4.0.2",
+    "mocha": "^6.1.4",
+    "chai": "^4.2.0"
   }
 }
